--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/blue"
-        android:centerColor="@color/blue2"
-        android:endColor="@color/black2"
+        android:startColor="@color/white"
+        android:centerColor="@color/white"
+        android:endColor="@color/white"
         android:angle="50"
     />
 </shape>
